# cocktails-backend

./: .gitignore  .mcp.json  Cargo.toml  README.md  devenv.nix  wrangler.toml
.github/workflows/: ci.yml
data/: cocktails.json  ingredients.json
docs/superpowers/plans/: 2026-04-18-devenv-wrangler.md
docs/superpowers/specs/: 2026-04-18-devenv-wrangler-design.md
migrations/: 0001_schema.sql  0002_event_config.sql
scripts/: seed.py
src/: db.rs  lib.rs
src/models/: cocktail.rs  ingredient.rs  mod.rs  payloads.rs  rows.rs  tests.rs
src/routes/: admin.rs  cocktails.rs  config.rs  ingredients.rs  mod.rs
