[package]
name = "cocktail-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker      = { version = "0.8", features = ["d1"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
base64      = "0.22"
uuid        = { version = "1",   features = ["v4", "serde", "js"] }
futures     = "0.3"

[profile.release]
opt-level = "s"
